#605 Support for client to send ping messages for subscriptions